operators & builtin methods

--- a/lessons/Ch05 - Operators & Builtin Methods.ipynb
+++ b/lessons/Ch05 - Operators & Builtin Methods.ipynb
@@ -52,171 +52,179 @@
     "\n",
     "| **function** | **usage** |\n",
     "| --- | --- |\n",
-    "| abs | - |\n",
-    "| all | - |\n",
-    "| any | - |\n",
-    "| ascii | - |\n",
-    "| bin | - |\n",
-    "| bool | - |\n",
+    "| **abs** | finds absolute value of a number |\n",
+    "| **all** | checks if all elements in a seq. evaluate to True |\n",
+    "| **any** | checks if atleast one element in a seq. evaluates to True |\n",
+    "| ascii | returns ascii representation of a string |\n",
+    "| bin | returns binary representation of an int |\n",
+    "| **bool** | evaluates a value in boolean context |\n",
     "| breakpoint | - |\n",
     "| bytearray | - |\n",
     "| bytes | - |\n",
-    "| callable | - |\n",
-    "| chr | - |\n",
-    "| classmethod | - |\n",
+    "| **callable** | check if an object is callable - all datatypes, function, and classes are callable |\n",
+    "| **chr** | returns unicode character at a position |\n",
+    "| **classmethod** | converts a method into a class method |\n",
     "| compile | - |\n",
     "| complex | - |\n",
     "| copyright | - |\n",
     "| credits | - |\n",
-    "| delattr | - |\n",
-    "| dict | - |\n",
-    "| dir | - |\n",
+    "| **delattr** | Deletes the named attribute from the given object |\n",
+    "| **dict** | create a dict |\n",
+    "| **dir** | list all attributes(properties) of an object |\n",
     "| display | - |\n",
     "| divmod | - |\n",
-    "| enumerate | - |\n",
+    "| **enumerate** | an iterator returning element of a list/tuple/set/dict along with their index |\n",
     "| eval | - |\n",
     "| exec | - |\n",
-    "| filter | - |\n",
-    "| float | - |\n",
+    "| **filter** | filter elements of a seq based on some criteria |\n",
+    "| **float** | Convert a string or number to a floating point number, if possible. |\n",
     "| format | - |\n",
-    "| frozenset | - |\n",
+    "| **frozenset** | creates an immutable set |\n",
     "| get_ipython | - |\n",
-    "| getattr | - |\n",
+    "| **getattr** | return attributes of an object |\n",
     "| globals | - |\n",
-    "| hasattr | - |\n",
-    "| hash | - |\n",
-    "| help | - |\n",
-    "| hex | - |\n",
-    "| id | - |\n",
-    "| input | - |\n",
-    "| int | - |\n",
-    "| isinstance | - |\n",
-    "| issubclass | - |\n",
-    "| iter | - |\n",
-    "| len | - |\n",
+    "| **hasattr** | checks if an object has specific named attribute |\n",
+    "| **hash** | calculates hash value |\n",
+    "| **help** | help documentation |\n",
+    "| **hex** | creates hexa decimal number |\n",
+    "| **id** | memory address of an object |\n",
+    "| **input** | takes input from console |\n",
+    "| **int** | converts a number or string into into, if possible. |\n",
+    "| **isinstance** | checks if a variable is an instance of a class, function? |\n",
+    "| **issubclass** | - |\n",
+    "| **iter** | - |\n",
+    "| **len** | length of seq. |\n",
     "| license | - |\n",
-    "| list | - |\n",
+    "| **list** | creates a list |\n",
     "| locals | - |\n",
-    "| map | - |\n",
-    "| max | - |\n",
+    "| **map** | transform one sequence into another |\n",
+    "| **max** | finds max element from a sequence |\n",
     "| memoryview | - |\n",
-    "| min | - |\n",
-    "| next | - |\n",
-    "| object | - |\n",
-    "| oct | - |\n",
-    "| open | - |\n",
+    "| **min** | finds min element from a sequence |\n",
+    "| **next** | - |\n",
+    "| **object** | - |\n",
+    "| **oct** | create an octal number |\n",
+    "| **open** | to open files |\n",
     "| ord | - |\n",
-    "| pow | - |\n",
+    "| **pow** | power of a number |\n",
     "| print | - |\n",
     "| property | - |\n",
-    "| range | - |\n",
+    "| **range** | creates numbers in a range |\n",
     "| repr | - |\n",
-    "| reversed | - |\n",
-    "| round | - |\n",
-    "| set | - |\n",
-    "| setattr | - |\n",
-    "| slice | - |\n",
-    "| sorted | - |\n",
-    "| staticmethod | - |\n",
-    "| str | - |\n",
-    "| sum | - |\n",
+    "| **reversed** | returns reversed iterator of a seq. |\n",
+    "| **round** | round off a number |\n",
+    "| **set** | create sets |\n",
+    "| **setattr** | set attributes for an object |\n",
+    "| **slice** | splice/slice notation |\n",
+    "| **sorted** | sorts a seq. |\n",
+    "| **staticmethod** | - |\n",
+    "| **str** | creates a str |\n",
+    "| **sum** | sum of elements in a seq. |\n",
     "| super | - |\n",
-    "| tuple | - |\n",
-    "| type | - |\n",
+    "| **tuple** | creates a tuple |\n",
+    "| **type** | gets type of a variable |\n",
     "| vars | - |\n",
-    "| zip | - |\n"
+    "| **zip** | zips one or more sets |\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get documentation on builtin objects.\n",
+    "# import builtins\n",
+    "# a = {name: getattr(getattr(builtins, name), '__doc__') for name in dir(builtins) if name[0].islower()}\n",
+    "# print('\\n'.join(map(lambda x: f'| {x[0]} | . |', a.items())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Lambda Functions\n",
+    "\n",
+    "lambda function are useful for creating anonymous functions.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| abs | - |\n",
-      "| all | - |\n",
-      "| any | - |\n",
-      "| ascii | - |\n",
-      "| bin | - |\n",
-      "| bool | - |\n",
-      "| breakpoint | - |\n",
-      "| bytearray | - |\n",
-      "| bytes | - |\n",
-      "| callable | - |\n",
-      "| chr | - |\n",
-      "| classmethod | - |\n",
-      "| compile | - |\n",
-      "| complex | - |\n",
-      "| copyright | - |\n",
-      "| credits | - |\n",
-      "| delattr | - |\n",
-      "| dict | - |\n",
-      "| dir | - |\n",
-      "| display | - |\n",
-      "| divmod | - |\n",
-      "| enumerate | - |\n",
-      "| eval | - |\n",
-      "| exec | - |\n",
-      "| filter | - |\n",
-      "| float | - |\n",
-      "| format | - |\n",
-      "| frozenset | - |\n",
-      "| get_ipython | - |\n",
-      "| getattr | - |\n",
-      "| globals | - |\n",
-      "| hasattr | - |\n",
-      "| hash | - |\n",
-      "| help | - |\n",
-      "| hex | - |\n",
-      "| id | - |\n",
-      "| input | - |\n",
-      "| int | - |\n",
-      "| isinstance | - |\n",
-      "| issubclass | - |\n",
-      "| iter | - |\n",
-      "| len | - |\n",
-      "| license | - |\n",
-      "| list | - |\n",
-      "| locals | - |\n",
-      "| map | - |\n",
-      "| max | - |\n",
-      "| memoryview | - |\n",
-      "| min | - |\n",
-      "| next | - |\n",
-      "| object | - |\n",
-      "| oct | - |\n",
-      "| open | - |\n",
-      "| ord | - |\n",
-      "| pow | - |\n",
-      "| print | - |\n",
-      "| property | - |\n",
-      "| range | - |\n",
-      "| repr | - |\n",
-      "| reversed | - |\n",
-      "| round | - |\n",
-      "| set | - |\n",
-      "| setattr | - |\n",
-      "| slice | - |\n",
-      "| sorted | - |\n",
-      "| staticmethod | - |\n",
-      "| str | - |\n",
-      "| sum | - |\n",
-      "| super | - |\n",
-      "| tuple | - |\n",
-      "| type | - |\n",
-      "| vars | - |\n",
-      "| zip | - |\n"
+      "(1,)\n",
+      "(2,)\n",
+      "(3,)\n"
      ]
     }
    ],
    "source": [
-    "# get documentation on builtin objects.\n",
-    "import builtins\n",
-    "a = {name: getattr(getattr(builtins, name), '__doc__') for name in dir(builtins) if name[0].islower()}\n",
-    "print('\\n'.join(map(lambda x: f'| {x} | - |', a)))"
+    "# Com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Welcome to Python 3.7's help utility!\n",
+      "\n",
+      "If this is your first time using Python, you should definitely check out\n",
+      "the tutorial on the Internet at https://docs.python.org/3.7/tutorial/.\n",
+      "\n",
+      "Enter the name of any module, keyword, or topic to get help on writing\n",
+      "Python programs and using Python modules.  To quit this help utility and\n",
+      "return to the interpreter, just type \"quit\".\n",
+      "\n",
+      "To get a list of available modules, keywords, symbols, or topics, type\n",
+      "\"modules\", \"keywords\", \"symbols\", or \"topics\".  Each module also comes\n",
+      "with a one-line summary of what it does; to list the modules whose name\n",
+      "or summary contain a given string such as \"spam\", type \"modules spam\".\n",
+      "\n",
+      "help> lambda\n",
+      "Lambdas\n",
+      "*******\n",
+      "\n",
+      "   lambda_expr        ::= \"lambda\" [parameter_list] \":\" expression\n",
+      "   lambda_expr_nocond ::= \"lambda\" [parameter_list] \":\" expression_nocond\n",
+      "\n",
+      "Lambda expressions (sometimes called lambda forms) are used to create\n",
+      "anonymous functions. The expression \"lambda parameters: expression\"\n",
+      "yields a function object.  The unnamed object behaves like a function\n",
+      "object defined with:\n",
+      "\n",
+      "   def <lambda>(parameters):\n",
+      "       return expression\n",
+      "\n",
+      "See section Function definitions for the syntax of parameter lists.\n",
+      "Note that functions created with lambda expressions cannot contain\n",
+      "statements or annotations.\n",
+      "\n",
+      "Related help topics: FUNCTIONS\n",
+      "\n",
+      "help> quit\n",
+      "\n",
+      "You are now leaving help and returning to the Python interpreter.\n",
+      "If you want to ask for help on a particular object directly from the\n",
+      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
+      "has the same effect as typing a particular string at the help> prompt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "help()"
    ]
   },
   {
