functions section added

--- a/lessons/Ch05 - Operators & Builtin Methods.ipynb
+++ b/lessons/Ch05 - Operators & Builtin Methods.ipynb
@@ -24,10 +24,33 @@
     "| \\_\\_or\\_\\_ | **\\|** | Y | . | Y | . | . | . | Y | . |\n",
     "| \\_\\_xor\\_\\_ | **^** | Y | . | Y | . | . | . | Y | . |\n",
     "| \\_\\_invert\\_\\_ | **~** | Y | . | Y | . | . | . | . | . |\n",
-    "| \\_\\_delattr\\_\\_ | **del** | Y | Y | Y | Y | Y | Y | Y | Y |\n",
+    "| \\_\\_delattr\\_\\_ | **del** | Y | Y | Y | Y | Y | Y | . | Y |\n",
     "| \\_\\_lshift\\_\\_ | **<<** | Y | . | Y | . | . | . | . | . |\n",
     "| \\_\\_rshift\\_\\_ | **>>** | Y | . | Y | . | . | . | . | . |\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 0, 'b': 1}\n",
+      "{'b': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = {'a': 0, 'b': 1}\n",
+    "print(l)\n",
+    "del l['a']\n",
+    "print( l )"
    ]
   },
   {
@@ -42,6 +65,26 @@
     "# method = '__lshift__'\n",
     "# m = map( lambda x: 'Y' if method in dir(x) else '.', l )\n",
     "# print( f'| {method} | . | { \" | \".join(m)} |' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Implement delattr(self, name).'"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set.__delattr__.__doc__"
    ]
   },
   {
@@ -129,6 +172,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool( v )\n",
+    "Y - numbers 0 - False, != 0 True\n",
+    "Y - sets/lists/tuples - []() False, len > 0 - True\n",
+    "Y - dict - zero k, v False, >0 k,v True\n",
+    "Y - str - empty string ('') False, len > 0 True\n",
+    "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 10, 'D')\n",
+      "('b', 20, 'B')\n",
+      "('c', 20, 'B')\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = ('a', 'b', 'c')\n",
+    "marks = (10, 20, 20)\n",
+    "grades = ('D', 'B', 'B')\n",
+    "for i in zip(name, marks, grades):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 127,
    "metadata": {},
    "outputs": [],
@@ -137,6 +228,27 @@
     "# import builtins\n",
     "# a = {name: getattr(getattr(builtins, name), '__doc__') for name in dir(builtins) if name[0].islower()}\n",
     "# print('\\n'.join(map(lambda x: f'| {x[0]} | . |', a.items())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 1)\n",
+      "('b', 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ('a', 'b', 'c')\n",
+    "b = (1, 2)\n",
+    "for i in zip(a, b):\n",
+    "    print(i)"
    ]
   },
   {
@@ -152,79 +264,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1,)\n",
-      "(2,)\n",
-      "(3,)\n"
+      "c\n"
      ]
     }
    ],
    "source": [
-    "# Com"
+    "l = {'a': 10, 'b': 20, 'c': 35}\n",
+    "for i in filter(lambda x: l[x] > 20, l):\n",
+    "    print(i)\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 204,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Welcome to Python 3.7's help utility!\n",
-      "\n",
-      "If this is your first time using Python, you should definitely check out\n",
-      "the tutorial on the Internet at https://docs.python.org/3.7/tutorial/.\n",
-      "\n",
-      "Enter the name of any module, keyword, or topic to get help on writing\n",
-      "Python programs and using Python modules.  To quit this help utility and\n",
-      "return to the interpreter, just type \"quit\".\n",
-      "\n",
-      "To get a list of available modules, keywords, symbols, or topics, type\n",
-      "\"modules\", \"keywords\", \"symbols\", or \"topics\".  Each module also comes\n",
-      "with a one-line summary of what it does; to list the modules whose name\n",
-      "or summary contain a given string such as \"spam\", type \"modules spam\".\n",
-      "\n",
-      "help> lambda\n",
-      "Lambdas\n",
-      "*******\n",
-      "\n",
-      "   lambda_expr        ::= \"lambda\" [parameter_list] \":\" expression\n",
-      "   lambda_expr_nocond ::= \"lambda\" [parameter_list] \":\" expression_nocond\n",
-      "\n",
-      "Lambda expressions (sometimes called lambda forms) are used to create\n",
-      "anonymous functions. The expression \"lambda parameters: expression\"\n",
-      "yields a function object.  The unnamed object behaves like a function\n",
-      "object defined with:\n",
-      "\n",
-      "   def <lambda>(parameters):\n",
-      "       return expression\n",
-      "\n",
-      "See section Function definitions for the syntax of parameter lists.\n",
-      "Note that functions created with lambda expressions cannot contain\n",
-      "statements or annotations.\n",
-      "\n",
-      "Related help topics: FUNCTIONS\n",
-      "\n",
-      "help> quit\n",
-      "\n",
-      "You are now leaving help and returning to the Python interpreter.\n",
-      "If you want to ask for help on a particular object directly from the\n",
-      "interpreter, you can type \"help(object)\".  Executing \"help('string')\"\n",
-      "has the same effect as typing a particular string at the help> prompt.\n"
-     ]
-    }
-   ],
    "source": [
-    "help()"
+    "# Comprehensions"
    ]
   },
   {
