--- a/lessons/Functions.ipynb
+++ b/lessons/Functions.ipynb
@@ -10,10 +10,14 @@
     "    1. [Takes zero or more params](#zero-or-more-params)\n",
     "    1. [Always returns a value](#returns-always)\n",
     "1. [Parameters](#params)\n",
-    "    1. [Positional Parameters](#positional)\n",
+    "    1. [Non-default Parameters](#non-default-params)\n",
     "    1. [Default Parameters](#kwdparams)\n",
     "    1. [Variable number of parameters](#variable-params)\n",
-    "1. [Parameter and return value data types](#param-return-types)"
+    "1. [Parameter order](#param-order)\n",
+    "1. [Function calls](#function-calls)\n",
+    "1. [Parameter and return value data types](#param-return-types)\n",
+    "1. [Nested functions](#nested)\n",
+    "1. [Decorators](#decorators)"
    ]
   },
   {
@@ -22,7 +26,7 @@
    "source": [
     "<a id='functions'>1. Functions</a>\n",
     "\n",
-    "A user defined function is created using Python's **def** keyword. General template of a function is:\n",
+    "A user defined function is created using Python's **def** keyword. Template for creating a function is:\n",
     "\n",
     "```python\n",
     "def function_name( zero_or_more_parameters ):\n",
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {
     "code_folding": []
    },
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +149,20 @@
    "source": [
     "<a id=\"params\">2. Parameters</a>\n",
     "\n",
-    "<a id=\"positional\">2.A. Positional Parameters</a>\n",
+    "Function parameters need to be specified without any data type. <ins>Parameter list to a function is just a comma separated list of paramerter names</ins>.\n",
     "\n",
-    "Function parameters need to be specified without any data type. Two important things related to parameters:\n",
-    "- parameter list to a function is just a comma separated list of paramerter names\n",
-    "- actual arguments - supplied when a function is called - are assigned to corresponding paramerters in the function definition (<ins>positional assignment</ins>)\n",
+    "<a id=\"non-default-params\">2.A. Non-default Parameters</a>\n",
     "\n",
-    "Let's craete a simple function to subtract two numbers."
+    "A parameter with no assigned default value is called non-default parameter. Zero or more non-default parameters can be supplied to a function. \n",
+    "\n",
+    "Actual arguments - supplied when a function is called - are assigned to corresponding paramerters in the function definition (<ins>positional assignment</ins>).\n",
+    "\n",
+    "Let's craete a simple function with non-default parameters to subtract two numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {
     "code_folding": []
    },
@@ -185,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -274,22 +280,290 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"variable-params\">2.C. Variable number of parameters</a>\n",
+    "\n",
+    "Python allows a function to accept any number of arguments using two constructs:\n",
+    "- variable number of positional arguments\n",
+    "- variable number of keyword arguments\n",
+    "\n",
+    "<ins>A parameter prefixed with * </ins>, in a function definition, allows any number of positional arguments to be supplied during function call.\n",
+    "\n",
+    "Let's understand this with a function that calculates the arithmetic mean of all arguments supplied."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30781"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg. of (1,2,3,4,5): 3.0\n",
+      "avg. of (1,2,3,4,5,6,7,8,9,10): 5.5\n"
+     ]
     }
    ],
+   "source": [
+    "def average( *numbers ):\n",
+    "    total = sum( numbers )\n",
+    "    n = len(numbers)\n",
+    "    return total / n\n",
+    "\n",
+    "avg_of_1to5 = average(1, 2, 3, 4, 5)\n",
+    "print( f'avg. of (1,2,3,4,5): {avg_of_1to5}')\n",
+    "\n",
+    "avg_of_1to10 = average(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
+    "print( f'avg. of (1,2,3,4,5,6,7,8,9,10): {avg_of_1to10}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the arguments supplied are collected into a ```tuple``` and passed to the parameter prefixed with * . Let's verify this with an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type is: <class 'tuple'>\n",
+      "type is: <class 'tuple'>\n",
+      "type is: <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function just prints type of varargs param\n",
+    "def test_function( *varparams ):\n",
+    "    print( f'type is: {type(varparams)}')\n",
+    "    \n",
+    "# no arg.s: passes empty tuple to varargs parameter \n",
+    "test_function()\n",
+    "# passes tuple (1,2,3) to varargs parameter \n",
+    "test_function(1,2,3) \n",
+    "# passes tuple ('a','b','c') to varargs parameter \n",
+    "test_function('a', 'b', 'c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, <ins>a parameter prefixed with \\*\\*</ins> allows any number of keyword arguments to be supplied during function call. Create a function to understand this in detail:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hottest day is: Monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hot_day( **day_and_temp ):\n",
+    "    max_temp = -1\n",
+    "    max_temp_day = None\n",
+    "    for day in day_and_temp:\n",
+    "        if day_and_temp.get(day) > max_temp:\n",
+    "            max_temp = day_and_temp.get(day)\n",
+    "            max_temp_day = day\n",
+    "    \n",
+    "    return max_temp_day\n",
+    "\n",
+    "# kwd args are collected into a dict:\n",
+    "# {'Monday':93, 'Tuesday':64, 'Wednesday':91}, and this dict is \n",
+    "# passed to day_and_temp parameter\n",
+    "day = hot_day( Monday=93, Tuesday=64, Wednesday=91)\n",
+    "print( f'hottest day is: {day}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the keyword arguments are collected into a dictionary and it is assigned to parameter prefixed with \\*\\*. Let's verify this with an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parameter type is: <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_function( **varkwdparams ):\n",
+    "    print( f'parameter type is: {type(varkwdparams)}')\n",
+    "    \n",
+    "test_function( kwdarg1=1, kwdarg2=2, kwdarg3=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"param-order\">3. Parameter order</a>\n",
+    "\n",
+    "Now, we know how to define( and use):\n",
+    "- non-default parameters\n",
+    "- default-value parameters\n",
+    "- parameters to accept varibale number of positional arguments\n",
+    "- parameters to accept variable number of keyword arguments\n",
+    "\n",
+    "**Parameters in a function need to follow these rules**:\n",
+    "1. at most one __\\*\\*__ parameter - must be the last in the parameter list - is allowed\n",
+    "1. at most one __\\*__ parameter - must preced any __\\*\\*__ parameter - is allowed\n",
+    "1. after __\\*__ parameter, non-default and default value parameters can be specified in any order\n",
+    "1. otherwise, zero or more non-default parameters are followed by zero or more default-value parameters\n",
+    "\n",
+    "\n",
+    "Let's look at some invalid parameter list specifications:\n",
+    "\n",
+    "1.\n",
+    "```python\n",
+    ">>> def test(**kwargs, a): pass\n",
+    "  File \"<stdin>\", line 1\n",
+    "    def test(**kwargs, a): pass\n",
+    "                       ^\n",
+    "SyntaxError: invalid syntax\n",
+    ">>>\n",
+    "```\n",
+    "<ins>__\\*\\*__ parameter is not last in the parameters list</ins>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.\n",
+    "```python\n",
+    ">>> def test( **one, **two): pass\n",
+    "  File \"<stdin>\", line 1\n",
+    "    def test( **one, **two): pass\n",
+    "                      ^\n",
+    "SyntaxError: invalid syntax\n",
+    "```\n",
+    "<ins>at most one __\\*\\*__ parameter is allowed</ins>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.\n",
+    "```python\n",
+    ">>> def test( **kwargs, *args): pass\n",
+    "  File \"<stdin>\", line 1\n",
+    "    def test( **kwargs, *args): pass\n",
+    "                        ^\n",
+    "SyntaxError: invalid syntax\n",
+    ">>>\n",
+    "```\n",
+    "<ins>__\\*__ parameter must precede __\\*\\*__ parameter</ins>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.\n",
+    "```python\n",
+    ">>> def test(*a, *b): pass\n",
+    "  File \"<stdin>\", line 1\n",
+    "    def test(*a, *b): pass\n",
+    "                 ^\n",
+    "SyntaxError: invalid syntax\n",
+    ">>>\n",
+    "```\n",
+    "<ins>at most one __\\*__ parameter is allowed</ins>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.\n",
+    "```python\n",
+    ">>> def test(b=True, a): pass\n",
+    "... \n",
+    "  File \"<stdin>\", line 1\n",
+    "SyntaxError: non-default argument follows default argument\n",
+    ">>>\n",
+    "```\n",
+    "<ins>Before __\\*__ parameter(if any), zero or more non-default params must precede zero or more default-value parameters</ins>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    ">>> def test(*a, b): \n",
+    "...     print(a)\n",
+    "...     print(b)\n",
+    "... \n",
+    ">>> test(1,2,3)\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<stdin>\", line 1, in <module>\n",
+    "TypeError: test() missing 1 required keyword-only argument: 'b'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Good cases\n",
+    "1. \n",
+    "```python\n",
+    ">>> def test(a, *b):\n",
+    "...     print(a)\n",
+    "...     print(b)\n",
+    "... \n",
+    ">>> test(1,2,3)\n",
+    "1\n",
+    "(2, 3)\n",
+    ">>> test(1)\n",
+    "1\n",
+    "()\n",
+    ">>> test()\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<stdin>\", line 1, in <module>\n",
+    "TypeError: test() missing 1 required positional argument: 'a'\n",
+    ">>> test( *(1, 2, 3) )\n",
+    "1\n",
+    "(2, 3)\n",
+    ">>>\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
